--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,11 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+stereo-control/.classpath
+
+stereo-control/.project
+
+stereo-control/.settings/org.eclipse.core.resources.prefs
+
+*.prefs
