--- a/stereo-control/pom.xml
+++ b/stereo-control/pom.xml
@@ -9,7 +9,6 @@
 	<packaging>jar</packaging>
 
 	<name>stereo-control</name>
-	<url>http://maven.apache.org</url>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -25,7 +24,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -37,7 +36,6 @@
 			<artifactId>json-simple</artifactId>
 		</dependency>
 	</dependencies>
-
 
 	<build>
 		<plugins>
