--- a/.gitignore
+++ b/.gitignore
@@ -32,14 +32,8 @@ stereo-control/.classpath
 
 stereo-control/.project
 
-stereo-control/.settings/org.eclipse.core.resources.prefs
+stereo-control/.settings/*
 
 *.prefs
 
-stereo-control/.settings/org.eclipse.wst.common.project.facet.core.xml
-
-stereo-control/target/classes/META-INF/MANIFEST.MF
-
-stereo-control/target/classes/META-INF/maven/de.reiswich.homeautomation/stereo-control/pom.properties
-
-stereo-control/target/classes/META-INF/maven/de.reiswich.homeautomation/stereo-control/pom.xml
+stereo-control/target/*
