MPD Java-Lib hinzugefügt und MPC-Steuerung darauf umgebaut. Damit verbinde ich mich direkt mit dem MPD-Player und gehe nicht mehr über die Command-Line

--- a/stereo-control/config/application.properties
+++ b/stereo-control/config/application.properties
@@ -12,3 +12,6 @@ logging.file=/home/pi/projects/radioplay/stereo.log
 
 # keinene WEB-Server starten, solange dieser nicht benötigt wird
 spring.main.web-application-type=NONE
+
+de.reiswich.mpd.server=192.168.178.23
+de.reiswich.mpd.port=6600
