--- a/stereo-control/pom.xml
+++ b/stereo-control/pom.xml
@@ -13,12 +13,12 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.3.RELEASE</version>
+		<version>3.5.7</version>
 	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.8</java.version>
+		<java.version>22</java.version>
 	</properties>
 
 	<dependencies>
@@ -43,6 +43,11 @@
 			<version>5.0.0</version>
 		</dependency>
 		-->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.13.4.2</version>
+    </dependency>
 
 	</dependencies>
 
