--- a/stereo-control/pom.xml
+++ b/stereo-control/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>de.reiswich.homeautomation</groupId>
 	<artifactId>stereo-control</artifactId>
-	<version>1.1.6</version>
+	<version>1.1.8</version>
 	<packaging>jar</packaging>
 
 	<name>stereo-control</name>
@@ -13,12 +13,12 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.7</version>
+		<version>2.4.13</version>
 	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>22</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
@@ -26,6 +26,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
+    <!-- für jackson.xml-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -43,11 +48,7 @@
 			<version>5.0.0</version>
 		</dependency>
 		-->
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.13.4.2</version>
-    </dependency>
+
 
 	</dependencies>
 
