Konstanten in application.properties ausgelagert, um einfacher anpassen zu können

--- a/stereo-control/config/application.properties
+++ b/stereo-control/config/application.properties
@@ -1,3 +1,5 @@
+
+
 spring.application.name=Stereo-Control
 
 logging.level.org.springframework.web=DEBUG
@@ -8,10 +10,17 @@ logging.level.de.reiswich=DEBUG
 
 # Logging pattern for file
 logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
-logging.file=/home/pi/projects/radioplay/stereo.log
+logging.file.name=/home/pi/projects/radioplay/stereo.log
 
-# keinene WEB-Server starten, solange dieser nicht benötigt wird
+# keinene WEB-Server starten, solange dieser nicht ben?tigt wird
 spring.main.web-application-type=NONE
 
-de.reiswich.mpd.server=192.168.178.23
-de.reiswich.mpd.port=6600
+heos.ip=192.168.178.127
+heos.port=1255
+
+radiocontrol.restartAfterMinutes=90
+radiocontrol.pingFailCounter=10
+radiocontrol.scanForDevicesInMinutes=2
+radiocontrol.startTimeToPlayMusic=11
+radiocontrol.endTimeToPlayMusic=22
+radiocontrol.scanRateInSec=10
