--- a/stereo-control/pom.xml
+++ b/stereo-control/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>de.reiswich.homeautomation</groupId>
 	<artifactId>stereo-control</artifactId>
-	<version>1.2.5</version>
+	<version>1.2.6</version>
 	<packaging>jar</packaging>
 
 	<name>stereo-control</name>
@@ -48,6 +48,11 @@
 			<version>5.0.0</version>
 		</dependency>
 		-->
+    <dependency>
+      <groupId>commons-net</groupId>
+      <artifactId>commons-net</artifactId>
+      <version>3.9.0</version>
+    </dependency>
 
 
 	</dependencies>
