first fully working version with Telnet

--- a/stereo-control/config/application.properties
+++ b/stereo-control/config/application.properties
@@ -1,26 +1,19 @@
-
-
 spring.application.name=Stereo-Control
-
 logging.level.org.springframework.web=DEBUG
 logging.level.de.reiswich=DEBUG
-
 # Logging pattern for the console
 #logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
-
 # Logging pattern for file
-logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+logging.pattern.file="%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 logging.file.name=/home/pi/projects/radioplay/stereo.log
-
 # keinene WEB-Server starten, solange dieser nicht ben?tigt wird
 spring.main.web-application-type=NONE
-
 heos.ip=192.168.178.127
 heos.port=1255
-
 radiocontrol.restartAfterMinutes=90
 radiocontrol.pingFailCounter=10
 radiocontrol.scanForDevicesInMinutes=2
 radiocontrol.startTimeToPlayMusic=11
 radiocontrol.endTimeToPlayMusic=22
 radiocontrol.scanRateInSec=10
+radiocontrol.playerPid=860255418
