--- a/stereo-control/pom.xml
+++ b/stereo-control/pom.xml
@@ -1,53 +1,53 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-	<groupId>de.reiswich.homeautomation</groupId>
-	<artifactId>stereo-control</artifactId>
-	<version>1.2.6</version>
-	<packaging>jar</packaging>
+  <groupId>de.reiswich.homeautomation</groupId>
+  <artifactId>stereo-control</artifactId>
+  <version>1.3.2</version>
+  <packaging>jar</packaging>
 
-	<name>stereo-control</name>
+  <name>stereo-control</name>
 
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.13</version>
-	</parent>
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.4.13</version>
+  </parent>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.8</java.version>
-	</properties>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <java.version>1.8</java.version>
+  </properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter</artifactId>
+    </dependency>
     <!-- für jackson.xml-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.googlecode.json-simple</groupId>
-			<artifactId>json-simple</artifactId>
-			<version>1.1.1</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/net.thejavashop/javampd 
-		<dependency>
-			<groupId>net.thejavashop</groupId>
-			<artifactId>javampd</artifactId>
-			<version>5.0.0</version>
-		</dependency>
-		-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/net.thejavashop/javampd
+    <dependency>
+      <groupId>net.thejavashop</groupId>
+      <artifactId>javampd</artifactId>
+      <version>5.0.0</version>
+    </dependency>
+    -->
     <dependency>
       <groupId>commons-net</groupId>
       <artifactId>commons-net</artifactId>
@@ -55,23 +55,23 @@
     </dependency>
 
 
-	</dependencies>
+  </dependencies>
 
-	<build>
-		<resources>
+  <build>
+    <resources>
       <resource>
         <directory>src/main/resources</directory>
       </resource>
-			<resource>
+      <resource>
         <!-- er 06.11.2025: Spring lies zusätzlich application.properties aus diesem Directory -->
-				<directory>config</directory>
-			</resource>
-		</resources>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+        <directory>config</directory>
+      </resource>
+    </resources>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
@@ -101,7 +101,7 @@
             <configuration>
               <executable>scp</executable>
               <arguments>
-                <argument>config/application.properties</argument>
+                <!-- <argument>config/application.properties</argument> -->
                 <argument>config/mobileDevices.properties</argument>
                 <argument>pi@192.168.178.37:/home/pi/projects/radioplay/config/</argument>
               </arguments>
@@ -109,6 +109,6 @@
           </execution>
         </executions>
       </plugin>
-		</plugins>
-	</build>
+    </plugins>
+  </build>
 </project>
