change volume added

--- a/stereo-control/config/application.properties
+++ b/stereo-control/config/application.properties
@@ -8,8 +8,10 @@ logging.pattern.file="%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %
 logging.file.name=/home/pi/projects/radioplay/stereo.log
 # keinene WEB-Server starten, solange dieser nicht ben?tigt wird
 spring.main.web-application-type=NONE
+# HEOS
 heos.ip=192.168.178.127
 heos.port=1255
+# Radiocontrol
 radiocontrol.restartAfterMinutes=90
 radiocontrol.pingFailCounter=10
 radiocontrol.scanForDevicesInMinutes=2
@@ -17,3 +19,10 @@ radiocontrol.startTimeToPlayMusic=11
 radiocontrol.endTimeToPlayMusic=22
 radiocontrol.scanRateInSec=10
 radiocontrol.playerPid=860255418
+# TEST SETUP
+#radiocontrol.restartAfterMinutes=1
+#radiocontrol.pingFailCounter=2
+#radiocontrol.scanForDevicesInMinutes=1
+#radiocontrol.startTimeToPlayMusic=11
+#radiocontrol.endTimeToPlayMusic=22
+#radiocontrol.scanRateInSec=10
