--- a/stereo-control/pom.xml
+++ b/stereo-control/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>de.reiswich.homeautomation</groupId>
   <artifactId>stereo-control</artifactId>
-  <version>1.3.2</version>
+  <version>1.3.3</version>
   <packaging>jar</packaging>
 
   <name>stereo-control</name>
@@ -101,7 +101,7 @@
             <configuration>
               <executable>scp</executable>
               <arguments>
-                <!-- <argument>config/application.properties</argument> -->
+                <argument>config/application.properties</argument>
                 <argument>config/mobileDevices.properties</argument>
                 <argument>pi@192.168.178.37:/home/pi/projects/radioplay/config/</argument>
               </arguments>
