Log-levels changed to Info, omitted writing to log-file due to problems on Raspberry PI

--- a/stereo-control/config/application.properties
+++ b/stereo-control/config/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=Stereo-Control
 logging.level.org.springframework.web=DEBUG
-logging.level.de.reiswich=DEBUG
+logging.level.de.reiswich=INFO
 # Logging pattern for the console
 #logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 # Logging pattern for file
 logging.pattern.file="%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
-logging.file.name=/home/pi/projects/radioplay/stereo.log
+# logging.file.name=/home/pi/projects/radioplay/stereo.log
 # keinene WEB-Server starten, solange dieser nicht ben?tigt wird
 spring.main.web-application-type=NONE
 # HEOS
