Explicit turn off command for Denon AVR added

--- a/stereo-control/config/application.properties
+++ b/stereo-control/config/application.properties
@@ -9,8 +9,9 @@ logging.file.name=/home/pi/projects/radioplay/stereo.log
 # keinene WEB-Server starten, solange dieser nicht ben?tigt wird
 spring.main.web-application-type=NONE
 # HEOS
-heos.ip=192.168.178.127
+denon.ip=192.168.178.127
 heos.port=1255
+denon.port=23
 # Radiocontrol
 radiocontrol.restartAfterMinutes=90
 radiocontrol.pingFailCounter=10
