Log-Files werden nach 5 Tagen überschrieben.

--- a/stereo-control/config/application.properties
+++ b/stereo-control/config/application.properties
@@ -6,6 +6,8 @@ logging.level.de.reiswich=DEBUG
 # Logging pattern for file
 logging.pattern.file="%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 logging.file.name=/home/pi/projects/radioplay/stereo.log
+# überschreibe Log-Files nach 5 Tagen
+logging.logback.rollingpolicy.max-history=5
 # keinene WEB-Server starten, solange dieser nicht ben?tigt wird
 spring.main.web-application-type=NONE
 # HEOS
