--- a/stereo-control/config/application.properties
+++ b/stereo-control/config/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Stereo-Control
 logging.level.org.springframework.web=DEBUG
-logging.level.de.reiswich=DEBUG
+logging.level.de.reiswich=INFO
 # Logging pattern for the console
 #logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 # Logging pattern for file
